# pico-mcp3008

./: README.md  mcp3008.cpp  mcp3008.h
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
examples/: CMakeLists.txt  example-pico-mcp3008.cpp
extras/: mcp3008.fzz
